--- a/Disj-CC.tex
+++ b/Disj-CC.tex
@@ -41,6 +41,12 @@
 \newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
 \DeclareMathOperator{\poly}{poly}
 
+\newcommand{\Dfrac}[2]{%
+  \ooalign{%
+    $\genfrac{}{}{1.2pt}1{#1}{#2}$\cr%
+    $\color{white}\genfrac{}{}{.4pt}1{\phantom{#1}}{\phantom{#2}}$}%
+}
+
 %Comments, TODO, etc.
 \newcommand{\hide}[1]{ }
 \newcommand{\note}[1]{ { \color{blue} #1 } }
@@ -669,10 +675,18 @@ We are going to bound the information cost for a protocol that solves $AND_k$. O
 \paragraph{Definitions}
 
 \begin{definition}
-KL-Divergence for $D(a || b)$ is defined by
+KL-Divergence for $D_{KL}(\Dfrac{a}{b})$ is defined by
 \begin{equation*} 
-    D(a || b) = \sum_{x \in \Omega} a(x)\log \left(\frac{a(x)}{b(x)}\right)
+    D_{KL}(\Dfrac{a}{b}) = \sum_{x \in \Omega} a(x)\log \left(\frac{a(x)}{b(x)}\right)
 \end{equation*}
+
+\begin{lemma}
+    For $X, Y, Z$ random variables
+    \begin{equation*}
+        I(X;Y|Z) = \mathbb{E}_{Y,Z}[D_{KL}\left(\Dfrac{X|Y,Z}{X|Z}\right)]
+    \end{equation*}
+\end{lemma}
+
 \end{definition}
 
 \begin{definition}
@@ -829,23 +843,87 @@ This is a rough method in order to use the fact that the protocol has to be "bia
 \paragraph{Part 2 - Divergence}
 In this part, we are going to show that the set we found in the last part is contributing large enough divergence. This will be enough since $x = 0^k$ has a high probability under our distribution. \newline
 Let us analyze the connection between $\lambda_i(\pi)$ to its divergence. \newline
-Pay attention to this: \newline
+\begin{lemma}
+    For 0-1 distribution $\mu$, player $i$ and transcript $\pi$
+    \begin{equation*}
+        \Pr[X_i = 0 | X_{-i}=0^{k-1}, \pi] = \frac{\mu(0)}{\mu(0) + \frac{\mu(1)}{\lambda_i(\pi)}}
+    \end{equation*}
+    \begin{equation*}
+        \Pr[X_i = 1 | X_{-i}=0^{k-1}, \pi] = \frac{\mu(1)}{\lambda_i(\pi)\mu(0) + \mu(1)}
+    \end{equation*}
+\end{lemma}
+\begin{proof}
+    By Bayes  theorem
+    \begin{equation*}
+        \Pr[X_i = 0 | X_{-i}=0^{k-1}, \pi] = \frac{\Pr[\pi | X=0^k]\Pr[X_i=0|X_{-i}=0^{k-1}]}{Pr[\pi|X_{-i} = 0^{k-1}]} = 
+    \end{equation*}
+    By the law of total probability for $\pi|X_{-i} = 0^{k-1}$ with $X_i=0,1$
+    \begin{equation*}
+        \frac{\Pr[\pi | X=0^k]\Pr[X_i=0|X_{-i}=0^{k-1}]}{Pr[\pi,X_i=0|X_{-i} = 0^{k-1}] + Pr[\pi,X_i=1|X_{-i} = 0^{k-1}]} = 
+    \end{equation*}
+    Using conditional probability for the denominator
+    \begin{equation*}
+        \frac{\Pr[\pi | X=0^k]\Pr[X_i=0|X_{-i}=0^{k-1}]}{\Pr[\pi | X=0^k]\Pr[X_i=0|X_{-i}=0^{k-1}] + \Pr[\pi | X=0^{i-1}10^{k-i}]\Pr[X_i=1|X_{-i}=0^{k-1}]} =
+    \end{equation*}
+    Since the input is drawn using product distribution
+    \begin{equation*}
+        \frac{\Pr[\pi | X=0^k]\mu(0)}{\Pr[\pi | X=0^k]\mu(0) + \Pr[\pi | X=0^{i-1}10^{k-i}]\mu(1)} = 
+    \end{equation*}
+    Divide both with $\Pr[\pi | X=0^k]$
+    \begin{equation*}
+        \frac{\mu(0)}{\mu(0) + \frac{\Pr[\pi | X=0^{i-1}10^{k-i}]}{\Pr[\pi | X=0^k]}\mu(1)} = 
+    \end{equation*}
+    Using the definition of $\lambda_i(\pi)$
+    \begin{equation*}
+        \frac{\mu(0)}{\mu(0) + \frac{\mu(1)}{\lambda_i(\pi)}}
+    \end{equation*}
+    This proves the first equation.
+    For the second equation
+    \begin{equation*}
+        \Pr[X_i = 1 | X_{-i}=0^{k-1}, \pi] = 1 - \Pr[X_i = 0 | X_{-i}=0^{k-1}, \pi]
+    \end{equation*}
+    Using the first equation
+    \begin{equation*}
+        1 - \Pr[X_i = 0 | X_{-i}=0^{k-1}, \pi] = 1 - \frac{\mu(0)}{\mu(0) + \frac{\mu(1)}{\lambda_i(\pi)}}
+    \end{equation*}
+    Some algebraic expansion
+    \begin{equation*}
+        1 - \frac{\mu(0)}{\mu(0) + \frac{\mu(1)}{\lambda_i(\pi)}} = \frac{\frac{\mu(1)}{\lambda_i(\pi)}}{\mu(0) + \frac{\mu(1)}{\lambda_i(\pi)}} = \frac{\mu(1)}{\lambda_i(\pi)\mu(0) + \mu(1)}
+    \end{equation*}
+\end{proof}
+\begin{lemma}
+    For a specific transcript $\pi$ and player $i$ where $\lambda_i(\pi) \geq \alpha$, for big enough $n$
+    \begin{equation*}
+        D_{KL}\left(\Dfrac{X_i | \pi, X_{-i} = 0^{k-1}}{X_i | X_{-i} = 0^{k-1}} \right) \geq \frac{\mu(1)}{4}
+    \end{equation*}
+\end{lemma}
+\begin{proof}
+By definition of KL-Divergence
 \begin{equation*}
-    \Pr[X_i = 0 | X_{-i}=0^{k-1}, \pi] \overset{(1)}{=} \frac{\Pr[\pi | X=0^k]\Pr[X_i=0|X_{-i}=0^{k-1}]}{Pr[\pi|X_{-i} = 0^{k-1}]} = 
+    D_{KL}\left(\Dfrac{X_i | \pi, X_{-i} = 0^{k-1}}{X_i | X_{-i} = 0^{k-1}} \right) = 
 \end{equation*}
 \begin{equation*}
-    = \frac{\Pr[\pi | X=0^k]\Pr[X_i=0|X_{-i}=0^{k-1}]}{\Pr[\pi | X=0^k]\Pr[X_i=0|X_{-i}=0^{k-1}] + \Pr[\pi | X=0^{i-1}10^{k-i}]\Pr[X_i=1|X_{-i}=0^{k-1}]}
+    \Pr[X_i = 0 | X_{-i}=0^{k-1}, \pi]\log\left(\frac{\Pr[X_i = 0 | X_{-i}=0^{k-1}, \pi]}{\Pr[X_i = 0 | X_{-i}=0^{k-1}]}\right) +
 \end{equation*}
 \begin{equation*}
- =  \frac{\mu(0)}{\mu(0) + \frac{\Pr[\pi | X=0^{i-1}10^{k-i}]}{\Pr[\pi | X=0^k]}\mu(1)} = \frac{\mu(0)}{\mu(0) + \frac{\mu(1)}{\lambda_i(\pi)}} 
-\end{equation*} 
-(1) - by Bayes \newline
-We can also conclude: \newline
-\begin{equation*}
-\Pr[X_i = 1 | X_{-i}=0^{k-1}, \pi]  = \frac{\frac{\mu(1)}{\lambda_i(\pi)}}{\mu(0) + \frac{\mu(1)}{\lambda_i(\pi)}} = \frac{\mu(1)}{\lambda_i(\pi)\mu(0) + \mu(1)}
+    \Pr[X_i = 1 | X_{-i}=0^{k-1}, \pi]\log\left(\frac{\Pr[X_i = 1 | X_{-i}=0^{k-1}, \pi]}{\Pr[X_i = 1 | X_{-i}=0^{k-1}]}\right)
 \end{equation*}
-The brave part now (analysing two parts of the divergence): \newline
-\paragraph{Part 1 of the divergence:}
+\paragraph{Part 2 of the divergence:}
+Since the input is drawn using product distribution
+\begin{equation*}
+    \Pr[X_i = 1 | X_{-i}=0^{k-1}, \pi]\log\left(\frac{\Pr[X_i = 1 | X_{-i}=0^{k-1}, \pi]}{\Pr[X_i = 1 | X_{-i}=0^{k-1}]}\right) = \Pr[X_i = 1 | X_{-i}=0^{k-1}, \pi]\log\left(\frac{\Pr[X_i = 1 | X_{-i}=0^{k-1}, \pi]}{\mu(1)}\right) = 
+\end{equation*}
+Using the previous lemma
+\begin{equation*}
+    \frac{\mu(1)}{\lambda_i(\pi)\mu(0) + \mu(1)}\log\left(\frac{\frac{\mu(1)}{\lambda_i(\pi)\mu(0) + \mu(1)}}{\mu(1)}\right) = 
+\end{equation*}
+Some algebraic expansion
+\begin{equation*}
+    \frac{\mu(1)}{\lambda_i(\pi)\mu(0) + \mu(1)}\log\left(\frac{1}{\lambda_i(\pi)\mu(0) + \mu(1)}\right) = -\mu(1) \frac{\log(\lambda_i(\pi)\mu(0) + \mu(1))}{\lambda_i(\pi)\mu(0) + \mu(1)}
+\end{equation*}
+Denote $\beta = (\lambda_i(\pi)\mu(0) + \mu(1))$. If $\beta \rightarrow \infty$, $\frac{log(\beta)}{\beta} \rightarrow 0$. 
+\end{proof}
+
 $\frac{\mu(1)}{\lambda_i(\pi)\mu(0) + \mu(1)} \log\left( \frac{1}{\lambda_i(\pi)\mu(0) + \mu(1)}\right) = -\mu(1) \frac{\log(\lambda_i(\pi)\mu(0) + \mu(1))}{\lambda_i(\pi)\mu(0) + \mu(1)}$ \newline
 It is true that $\frac{logx}{x} \rightarrow 0$ for $x \rightarrow \infty$ \newline
 For small k, $\mu(0) \rightarrow 1$. We can choose big enough $\alpha$ such that for big n, if $\lambda_i(\pi) \geq \alpha$ it is true that: \newline
@@ -853,13 +931,29 @@ $\lambda_i(\pi)\mu(0) + \mu(1) \geq \lambda_i(\pi)\mu(0) \geq \frac{\lambda_i(\p
 $ \frac{\log(\lambda_i(\pi)\mu(0) + \mu(1))}{\lambda_i(\pi)\mu(0) + \mu(1)} < \frac{1}{8}$ \newline
 To conclude this part:
 $\frac{\mu(1)}{\lambda_i(\pi)\mu(0) + \mu(1)} \log\left( \frac{1}{\lambda_i(\pi)\mu(0) + \mu(1)}\right) \geq -\mu(1) \frac{1}{8}$
-\paragraph{Part 2 of the divergence:}
+\paragraph{Part 1 of the divergence:}
 $\frac{\mu(0)}{\mu(0) + \frac{\mu(1)}{\lambda_i(\pi)}}\log\left(\frac{1}{\mu(0) + \frac{\mu(1)}{\lambda_i(\pi)}}\right) \geq \frac{\mu(0)}{\mu(0) + \frac{\mu(1)}{\alpha}}\log\left(\frac{1}{\mu(0) + \frac{\mu(1)}{\alpha}}\right) = \frac{\mu(0)}{1 - \mu(1) + \frac{\mu(1)}{\alpha}}\log\left(\frac{1}{1 - \mu(1) + \frac{\mu(1)}{\alpha}}\right) = \frac{\mu(0)}{1 - \mu(1)(1 -\frac{1}{\alpha})}\log\left(\frac{1}{1 - \mu(1)(1 -\frac{1}{\alpha})}\right) = \frac{\mu(0)}{1 - \mu(1)(1 -\frac{1}{\alpha})}\log\left(1 + \frac{\mu(1)(1 -\frac{1}{\alpha})}{1 - \mu(1)(1 -\frac{1}{\alpha})}\right) \geq \frac{\mu(0)(\mu(1)(1 -\frac{1}{\alpha}))}{2\left(1 - \mu(1)(1 -\frac{1}{\alpha})\right)^2} \geq \frac{\mu(1)}{4}$ \newline
 $\log(1+x) \sim x$ for $x \rightarrow 0$
 \paragraph{Conclude Divergence part}
-If $\lambda_i(\pi) \geq \pi$, for big enough $n$:
+If $\lambda_i(\pi) \geq \alpha$, for big enough $n$:
 $D\left(\frac{X_i | \pi, X_{-i} = 0^{k-1}}{X_i | X_{-i}} \right) \geq \frac{\mu(1)}{4} $
-\paragraph{Part 3 - Information Summary}
+\paragraph{Part 3 - Information Summary} \newline
+By definition of $X$
+\begin{equation*}
+    I(X;\Pi) = I(X_i,X_{-i};\Pi)
+\end{equation*}
+Using chain rule for mutual information
+\begin{equation*}
+    I(X_i,X_{-i};\Pi) = I(X_{-i}; \Pi) + I(X_i;\Pi|X_{-i})
+\end{equation*}
+Since mutual information is nonnegative
+\begin{equation*}
+    \overbrace{I(X_{-i}; \Pi)}^{\geq 0} + I(X_i;\Pi|X_{-i}) \geq I(X_i;\Pi|X_{-i})
+\end{equation*}
+Using the mutual information - kl-divergence relation
+\begin{equation*}
+    I(X_i;\Pi|X_{-i}) = \mathbb{E}_{x, \pi \sim \mu} \left( D_{KL}\left(\Dfrac{X_i | \pi, X_{-i}}{X_i | X_{-i}} \right) \right)
+\end{equation*}
 \begin{equation*}
     I(X;\Pi) = \overset{k+i}{\underset{j=i+1}{\sum } } I[X_{j \% k}, \Pi | X_{<(j \% k)}] \geq I(X_i;\Pi | X_{-i}) = \mathbb{E}_{x, \pi \sim \mu} \left( D\left(\frac{X_i | \pi, X_{-i}}{X_i | X_{-i}} \right) \right) \geq
 \end{equation*}
