--- a/examples/tau-thesis-template/tau-thesis-template/thesis.tex
+++ b/examples/tau-thesis-template/tau-thesis-template/thesis.tex
@@ -130,9 +130,9 @@
 %% *** Change this example to appropriate values. ***
 \degree{Master of Science}
 \department{Computer Science}
-\gradyear{2016}
-\author{Author Name}
-\title{Thesis Title}
+\gradyear{2021}
+\author{Peleg Kazaz}
+\title{Communication Complexity of Set Disjointness Over Product Distributions}
 
 %% *** NOTE ***
 %% Put here all other formatting commands that belong in the preamble.
@@ -186,9 +186,8 @@
 \cleardoublepage
 %% This generates a "dedication" section, if needed -- just a paragraph
 %% formatted flush right (uncomment to have it appear in the document).
-\begin{dedication}
-Shekh Ma Shieraki Anni.
-\end{dedication}
+%\begin{dedication}
+%\end{dedication}
 
 %% The `dedication' and `acknowledgements' sections do not create new
 %% pages so if you want the two sections to appear on separate pages,
@@ -209,7 +208,7 @@ Shekh Ma Shieraki Anni.
 \end{acknowledgements}
 
 %% This generates the Table of Contents (on a separate page).
-%\tableofcontents
+\tableofcontents
 
 %% This generates the List of Tables (on a separate page), if needed
 %% (uncomment to have it appear in the document).
@@ -236,6 +235,9 @@ Shekh Ma Shieraki Anni.
 %%  of your thesis at a time by using `\includeonly'.                 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\chapter{Upper bound for small parties}
+\chapter{Upper bound for large parties}
+\chapter{Lower bound for $AND_k$ for small parties}
 %% *** Include chapter files here. ***
 
 %% This adds a line for the Bibliography in the Table of Contents.
