thesis to right dir

--- a/thesis-work/thesis.tex
+++ b/thesis-work/thesis.tex
@@ -186,9 +186,8 @@
 \cleardoublepage
 %% This generates a "dedication" section, if needed -- just a paragraph
 %% formatted flush right (uncomment to have it appear in the document).
-\begin{dedication}
-Shekh Ma Shieraki Anni.
-\end{dedication}
+%\begin{dedication}
+%\end{dedication}
 
 %% The `dedication' and `acknowledgements' sections do not create new
 %% pages so if you want the two sections to appear on separate pages,
@@ -209,7 +208,7 @@ Shekh Ma Shieraki Anni.
 \end{acknowledgements}
 
 %% This generates the Table of Contents (on a separate page).
-%\tableofcontents
+\tableofcontents
 
 %% This generates the List of Tables (on a separate page), if needed
 %% (uncomment to have it appear in the document).
@@ -236,6 +235,9 @@ Shekh Ma Shieraki Anni.
 %%  of your thesis at a time by using `\includeonly'.                 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\chapter{Upper bound for small parties}
+\chapter{Upper bound for large parties}
+\chapter{Lower bound for $AND_k$ for small parties}
 %% *** Include chapter files here. ***
 
 %% This adds a line for the Bibliography in the Table of Contents.
