--- a/thesis-work/acknowledgements.tex
+++ b/thesis-work/acknowledgements.tex
@@ -1,3 +1,1 @@
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pharetra tellus sit amet dolor vulputate aliquam at vitae magna. Maecenas imperdiet lobortis urna et egestas. Nullam iaculis nulla id nibh viverra, et aliquam dui tincidunt. Vestibulum viverra sodales lectus a luctus. Phasellus mattis, sapien in euismod imperdiet, ex augue consequat libero, eget suscipit lorem ligula sed orci. Proin rhoncus lacinia faucibus. Quisque maximus odio non metus ullamcorper facilisis. Pellentesque nibh leo, fermentum vel cursus eget, fringilla aliquam arcu. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean maximus lobortis mi, ac porta libero viverra vel.
-
-Morbi mattis, orci in aliquet dapibus, urna odio commodo libero, ut consequat leo arcu in libero. Aliquam dapibus sem justo. Praesent vel rhoncus lectus. Fusce sit amet turpis cursus mi dictum vulputate. Nullam consequat commodo quam, quis dignissim ligula tempor quis. In cursus enim nulla, efficitur aliquam nisl consectetur quis. Vivamus cursus iaculis accumsan. Integer nibh quam, semper at urna id, condimentum imperdiet lectus. Donec molestie sem metus, non placerat tortor malesuada a. Duis non ipsum luctus, lobortis leo sed, feugiat tortor. Suspendisse ut eros non justo pellentesque semper. Nunc felis mauris, interdum eu mattis eget, maximus ac massa. Pellentesque a elementum elit, vitae facilisis ipsum. Aenean sit amet suscipit eros. 
+I would like to thank my advisor, Rotem Oshman, for her patience, empathy and help throughout the long process. I would also like to thank my colleagues, Or Fischer and Tal Roth, for helping form and finalize the ideas.
