--- a/thesis-work/thesis.tex
+++ b/thesis-work/thesis.tex
@@ -250,7 +250,7 @@
 % \bibliography{refs}
 
 %% This adds the hebrew abstract and back cover to the thesis.
-% \includepdf[pages=-]{hebrew-abstract.pdf}
+\includepdf[pages=-]{hebrew-abstract.pdf}
 
 %% *** NOTE ***
 %% If you don't use bibliography files, comment out the previous line
